--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+    html {
+        font-family: 'Bank Gothic', sans-serif;
+    }
+
     body {
         @apply bg-slate-300;
     }
